# rayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: HeaderFiles.h  Macro.h  RenderQueue.h  camera.h  hitableList.h  presets.h  ray.h
include/Integrator/: integrator.h
include/buffer/: Buffer.h  RGB12Buffer.h
include/material/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h  microfacet.h  normal_shader.h  texture.h
include/math/: baiscSampleFunctions.h  matrix.h  test.cpp  vector.h  vector4.h
include/noise/: perlin_noise_3d.h
include/object/: aabb.h  aarect.h  box.h  bvh_node.h  constant_medium.h  hitable.h  model.h  rotate_y.h  scene.h  sphere.h  texture_rectangle.h  texture_triangle.h  translate.h  triangle.h
include/renderPass/: camera.h  renderPass.h  subRender.h
include/texture/: checker_texture.h  constant_color.h  constant_roughness.h  image_texture.h  marble_texture.h  noise_texture.h  texture.h  turbulence_texture.h
include/tool/: common.h  fLoader.h  flog.h  picTool.h  picTools.h  ppmUtil.h
src/: main.cpp  presets.cpp
